# ragApp

./: .gitignore  README.md  blogText.txt  ingestion.py  main.py  pyproject.toml  tempCodeRunnerFile.py
faiss_index_reaAct/: index.faiss  index.pkl
