[project]
name = "ragapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "langchainhub>=0.1.21",
    "langsmith>=0.4.40",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
]
